<resources>
    <string name="app_name">frontendAvanzado</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titleToolBarCharacters">Characters</string>
    <string name="titleToolBarDetails">Character Detail</string>
    <string name="sortAZ">Ordenar: A-Z</string>
    <string name="sortZA">Ordenar: Z-A</string>
    <string name="nameTitle">Name</string>
    <string name="speciesTitle">Species</string>
    <string name="statusTitle">Status</string>
    <string name="genderTitle">Gender</string>
    <string name="originTitle">Origin</string>
    <string name="episodeAppearancesTitle">Episode appearances</string>
    <string name="emailInput">Correo</string>
    <string name="passwordInput">Contraseña</string>
    <string name="login">Iniciar Sesión</string>
    <string name="defaultEmail">kie21581@uvg.edu.gt</string>
    <string name="errorLogin">ERROR: Correo y/o contraseña invalido(s)</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="save">Guardar</string>
    <string name="sync">Sincronizar</string>
    <string name="delete">Borrar</string>
</resources>